--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="menu">
             <div class='block_on_menu'><b>GODSIGNER</b></div><div class="block_menu"></div>
             </div>
-              <div class="photo_header"></div>
+              <div class="photo_header"><img id="photo_head" src="img/header.png" alt=""></div>
             <div class="block_name_us">
 
             <div class="name_us">
